style.css
#menu {
    display: flex;
    justify-content: space-between;
}

.displayed {
  width: 100px;
  padding-right: 13px;
  margin-top: 15px;
}

#container {
  width: 100%;
  background-color:#333333;
  margin:0 auto;
  padding-top: 0px;
  margin-bottom: 0%;
  text-align: center;
}

#top {
  background-color: #333333;
  text-align: center;
  color: white;
  padding-top: 50px;
  padding-bottom: 50px;
}

#middle {
  background-color: #f9e151;
  text-align: center;
  color: black;
  padding-top: 30px;
  padding-bottom: 20px;

}
.middle1{
  display: flex;
  flex-wrap: wrap;
  flex-flow: row;
  justify-content:space-between;
}

#lower{
  background-color:#ebebeb;
  margin:0 auto;
  padding-top: 30px;
  padding-bottom: 30px;
  margin-bottom: 0%;
  text-align: center;
  color: black;
}

#bottom {
  background-color: #333333;
  color: white;
  font-size: 1em;
  text-align: left;
  padding-bottom: 30px;
}

/*#lower {
  background-color: #ebebeb;
  text-align: center;
  color: black;
  padding-top: 30px;
  padding-bottom: 100px;
}*/

#sponsors {
  background-color: #f9e151;
  text-align: center;
  color: black;
  padding-top: 20px;
  padding-bottom: 70px;
}

#footer{
  padding-top: 30px;
  text-align: center;
  background-color: #333333;
  margin-top: 0;
  margin-bottom: 0;
  font-size: .8em;
}

#letter{
  text-align: left;
  margin: 0px;
  color: #fff
}

.sponsorlogo{
  display: flex;
  flex-flow: row;
  max-width: 250px;
  max-height: 40px;
  margin:auto;
  justify-content:space-between;
}

h1{
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  font-style: normal;
}

p{
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  text-align: justify;
  padding-left: 25%;
  padding-right: 25%;
  font-size: 1.1em;
  line-height: 1.3em;
  max-width: 70%;
}

h2 {
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  font-size: 2.8em;
  font-weight: lighter;
  text-align: center;
  margin-left:15%;
  margin-right:15%;
}


h3 {
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
}

#button1 a:link, #button1 a:visited{
  color: #f9e151;
}

img{
  max-width: 60%;
  max-height: 60%;
  /*border-style: solid;
  border-width: 5px;
  border-color: #333333;*/
}

.mosaic {
    width: 80%;
    float: center;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    overflow: hidden;
    margin:auto;
}

.mosaic > div,
.mosaic > a,
.mosaic > img {
    float: left;
}

.mosaic > .item {
	position: relative;
}

.mosaic > .item.withImage {
	background-size: cover;
}

.mosaic > .item > .overlay {
	opacity: 0;
	position: absolute;
	left: 0px; right: 0px; top: 0px; bottom: 0px;
	transition: opacity .2s ease-in-out;
	-moz-transition: opacity .2s ease-in-out;
	-webkit-transition: opacity .2s ease-in-out;
}

.mosaic > .item:hover > .overlay {
	opacity: 1;
}

.mosaic > .item > .overlay > .texts {
	position: absolute;
	left: 0px; right: 0px; bottom: 0px;
	padding: 15pt;
	background: rgba(0, 0, 0, 0.2);
	color: #fff;
}

.mosaic > .item > .overlay > .texts h1,
.mosaic > .item > .overlay > .texts h2 {
	margin: 0;
	line-height: 1.3em;
}

.mosaic > .item > .overlay > .texts h1 {
	font-size: 17pt;
}

.mosaic > .item > .overlay > .texts h2 {
	font-size: 13pt;
}

.fotorama{
  margin: auto;
  width: 50%;
  padding-bottom: 20px;
}

.button a:link, .button a:visited {
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  border-style: solid;
  border-width: 2px;
  text-decoration: none;
  width: 175px;
  padding: 8px;
  margin-bottom: 100px;
  margin-top: 100px;
  color: black;
  margin: auto;
  width: 50%;
}

#button3 a:hover{
  background-color:#ebebeb;
}

#button2 a:hover{
  background-color: #f9e151;
}

.button a:hover, .button a:active{
  background-color: #f9e151;
}

#button1 a:hover, #button1 a:active{
  background-color: gray;
}

.navigation{
  padding: 0;
  list-style:none;
  background:#333333;
  padding:0;
  display: none;
  flex-flow: column;
}

ul{
  display: flex;
}

.navigation li{
  list-style-type: none;
  float: right;
  margin: 0;
  padding-left: 10px;
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  font-size: 1.2em;
}

.navigation a:link, .navigation a:visited{
  display: flex;
  flex-flow: row;
  color: #f9e151;
  background-color: #333333;
  text-align: center;
  text-decoration: none;
  padding: 10px;
}

.navigation a:hover, .navigation a:active {
  text-decoration:underline;
  color: #f9e151;
}

form {
    margin: 0 auto;
    padding: 2em;
    text-align: center;
}

label {
    /* To make sure that all labels have the same size and are properly aligned */
    display: inline-block;
    width: 90px;
    text-align: center;
    font-family: 'Raleway', Helvetica, Arial, sans-serif;
    color: black;
}

input, textarea {
    /* To make sure that all text fields have the same font settings
       By default, textareas have a monospace font */
    font-family: 'Playfair Display', serif;

    /* To give the same size to all text field */
    width: 300px;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    /* To harmonize the look & feel of text field border */
    border: 1px solid #999;
}

form div + div {
    margin-top: 1em;
}

textarea {
    /* To properly align multiline text fields with their labels */
    vertical-align: top;

    /* To give enough room to type some text */
    height: 8em;

    /* To allow users to resize any textarea vertically
       It does not work on all browsers */
    resize: vertical;
}

.menu-trigger{
  font-size: 3em;
  order:1;
  display: none;
  color: #f9e151;
  background-color: #333333;
  text-align: center;
  text-decoration: none;
  padding-left: 15px;
  padding-top: 13px;
}

.header, .main, .aside, .footer{
flex:1 100%;
padding: 10px;
}
.gallery{
  display: flex;
  flex-flow: row;
  flex-wrap: wrap;
  justify-content: space-between;
}
.placeholder1{
  background-color: #666;
  width: 500px;
  height: 300px;
  margin: 1em;
  padding: 1em;
}

.ac-container{
	width: 400px;
	margin: 10px auto 30px auto;
}

.ac-container label{
	font-family: Helvetica, Arial, sans-serif;
	padding: 5px 20px;
	z-index: 20;
	display: block;
	height: 30px;
	cursor: pointer;
	color: #777;
    background-color: lightgreen;
    border: 1px solid black;
	font-size: 1.5em;
}

.ac-container label:hover{
	background: #fff;
}

.ac-container input:checked + label,
.ac-container input:checked + label:hover{
	background: #c6e1ec;
	color: #3d7489;
}

.ac-container input{
	display: none;
}

.ac-container article{
	background: rgba(255, 255, 255, 0.5);
	margin-top: -1px;
	overflow: hidden;
	height: 0px;
	position: relative;
	z-index: 10;
	transition:
		height 0.3s ease-in-out,
		box-shadow 0.6s linear;
}

.ac-container input:checked ~ article{
	transition:
		height 0.5s ease-in-out,
		box-shadow 0.1s linear;
	box-shadow: 0px 0px 0px 1px rgba(155,155,155,0.3);
}

.ac-container input:checked ~ article.ac-small{
	height: 140px;
}
.ac-container input:checked ~ article.ac-medium{
	height: 180px;
}



@media (max-width:650px){
  .menu-trigger{
    display: flex;
    flex-flow:row;
    font-size: 3em;
  }
  .header{
    display:flex;
    flex-flow:row;
  }
  .navigation ul{
    flex-flow:row;
    justify-content:center;
    background:#00a085;
  }
  .navigation a:hover{
    background:#00806A;
    padding:5px 20px;
  }
  .middle1{
    display: flex;
    flex-flow: column;
  }
}

@media (min-width:650px){
  .menu-trigger{
    display:none;
  }
  .navigation {
      display:flex;
      flex-flow: row;
      justify-content: flex-start;
  }
  .navigation a:hover{
    background:black;
  }
  .first{
    margin-right:auto;
  }

@media (min-width:800px){
  .menu-trigger{
    display:none;
  }
  .navigation {
      display:flex;
      flex-flow: row;
      justify-content: flex-start;
  }
  .navigation a:hover{
    background:black;
  }
  .first{
    margin-right:auto;
  }
}

